--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
+# System files
+.DS_Store
+Thumbs.db
+
+# Environment variables (Critical security)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+!.env.example
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -17,25 +29,30 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# Virtual Environment
+MANIFEST
 venv/
-.venv/
 env/
+ENV/
 
-# Environment Variables (CRITICAL)
-.env
-.env.local
-.env.*
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.npm/
+dist/
 
 # IDEs
 .vscode/
 .idea/
 *.swp
+*.swo
 
-# OS
-.DS_Store
-Thumbs.db
+# Project specific
+backend/db.sqlite3
+active_context/
