--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,14 @@
 fastapi
 uvicorn
 firecrawl-py
-groq
+openai
+supabase
 python-dotenv
 requests
 pydantic
-streamlit
 httpx
 textstat
+psycopg2-binary
+git-python
+python-multipart
+gunicorn
