--- a/frontend_web/package.json
+++ b/frontend_web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-seo-analyzer-web",
+  "name": "ai_seo_analyzer_web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
