--- a/frontend_web/.env.example
+++ b/frontend_web/.env.example
@@ -1,1 +1,9 @@
+# AI SEO Analyzer - Frontend Environment Variables
+# Copy this file to .env and fill in your values
+
+# Backend API URL (use localhost for development, Render URL for production)
 VITE_API_URL=http://localhost:8000
+
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
